# RotationAndProjection

./: .gitignore  CMakeLists.txt  index.js  index.wasm
assets/: kocka.csv  majom.csv  output.txt
cmake_modules/: FindSDL2.cmake
include/: App.h  Draw.h  EventHandler.h  GlobalVariables.h  InputHandler.h  Logging.h  MatrixClass.h  Projections.h  Rotations.h  VertexReader.h
src/: main.cpp
